--- a/src/components/Error/Error.module.css
+++ b/src/components/Error/Error.module.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     font-size: 24px;
+    margin: 1em
 }
 
 .button {
