--- a/src/components/Post/Post.module.css
+++ b/src/components/Post/Post.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    margin: .5em;
 
     border: 1px solid teal;
 }
