--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,19 +1,31 @@
-.loader {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    border: 3px dashed teal;
-    animation: rotate infinite 3s linear;
-}
-
-@keyframes rotate {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
 .center {
     margin: 1rem auto;
 }
+
+.loader {
+    width: 50px;
+    aspect-ratio: 1;
+    display: grid;
+    border: 4px solid #0000;
+    border-radius: 50%;
+    border-right-color: #25b09b;
+    animation: rotate 1s infinite linear;
+}
+.loader::before,
+.loader::after {
+    content: "";
+    grid-area: 1/1;
+    margin: 2px;
+    border: inherit;
+    border-radius: 50%;
+    animation: rotate 2s infinite linear;
+}
+.loader::after {
+    margin: 8px;
+    animation-duration: 3s;
+}
+@keyframes rotate{
+    100%{transform: rotate(1turn)}
+}
+/* HTML: <div class="loader"></div> */
+
